--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
     sudo apt-get install build-essential -y && 
     sudo apt-get build-dep imagemagick -y && 
     wget "https://github.com/ImageMagick/ImageMagick6/archive/${IMAGEMAGICK_VERSION}.tar.gz" && 
-    tar -xvf "ImageMagick-${IMAGEMAGICK_VERSION}.tar.gz" && 
+    tar -xvf "${IMAGEMAGICK_VERSION}.tar.gz" && 
     cd "ImageMagick-${IMAGEMAGICK_VERSION}" && 
     ./configure --prefix=$HOME/opt --without-magick-plus-plus --without-perl --disable-openmp --with-gvc=no && 
     make -j$CORES && sudo make install && sudo ldconfig && 
